correct the alignment of client heading

--- a/frontend/src/app/clients/[clientId]/styles.module.css
+++ b/frontend/src/app/clients/[clientId]/styles.module.css
@@ -9,6 +9,12 @@
   gap: 42px;
 }
 
+.clientInfoRow {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
 .infoContainer {
   display: flex;
   align-items: center;
@@ -20,6 +26,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-top: 10px;
 }
 
 .header {
