--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -210,14 +210,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-family:
-    Inter,
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    sans-serif;
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, sans-serif;
 
   font-size: var(--font-base);
   line-height: var(--lh-normal);
@@ -415,4 +409,20 @@ select {
   left: -24px;
   width: calc(100% + 48px);
   margin: 6px 0;
+}
+
+.title {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 16px;
+  color: var(--primaryD);
+  margin-top: 8px;
+}
+
+.description {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
+  color: var(--slate-600);
+  margin-bottom: 10px;
 }
